--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 	"dependencies": {
 		"@supabase/supabase-js": "^2.0.2",
 		"crypto-js": "^4.1.1",
-		"gray-matter": "^4.0.3",
+		"js-yaml": "4.1.0",
 		"uuid": "^9.0.0"
 	}
 }
