--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"obsidian": "latest",
 		"ts-jest": "^29.1.1",
 		"tslib": "2.3.1",
-		"typescript": "4.4.4"
+		"typescript": "latest"
 	},
 	"dependencies": {
 		"@supabase/supabase-js": "^2.0.2",
